<resources>
    <string name="app_name">Weather</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Weather by City Name\n(We recommend to add state and country to get unambiguous result. For example: use \"paris,tx,us\" instead of \"paris\" only)</string>

    <!--UI display string-->
    <string name="displaying_city">Current City: </string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="wind">Wind Speed:</string>
</resources>
