<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sks.demo.weather.MainActivity">

    <!-- visible during http request -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity = "center_vertical|center_horizontal"
        android:visibility="gone"/>
    <!-- visible when there is info/error need to be displayed-->
    <TextView
        android:id="@+id/display_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/search_hint"
        android:textSize="@dimen/default_font_size"
        android:gravity="center_vertical|center_horizontal" />

    <!-- Main Display area for Weather Info -->
    <ScrollView
        android:id="@+id/weather_display"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Display City Name -->
            <TextView
                android:id="@+id/display_cityname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/displaying_city"
                android:textSize="@dimen/title_font_size"
                android:layout_margin="@dimen/common_margin"
                android:paddingLeft="@dimen/common_padding"
                android:gravity="center_vertical|left" />

            <!-- weather Icon with summary -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/weather_row_height"
                android:layout_margin="@dimen/common_margin"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/weather_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/weather_main_label_width"
                    android:layout_gravity="center_vertical|center"
                    android:gravity="center_vertical|right"/>
                <TextView
                    android:id="@+id/weather_temp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/default_font_size"
                    android:paddingLeft="@dimen/common_padding"
                    android:textStyle="bold"
                    android:gravity="center_vertical|left" />
            </LinearLayout>

            <!-- Atmospheric Pressure -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/weather_row_height"
                android:layout_margin="@dimen/common_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/weather_detail_label_width"
                    android:layout_height="match_parent"
                    android:text="@string/pressure"
                    android:textSize="@dimen/default_font_size"
                    android:paddingLeft="@dimen/common_padding"
                    android:gravity="center_vertical|right" />
                <TextView
                    android:id="@+id/weather_pressure"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/default_font_size"
                    android:paddingLeft="@dimen/common_padding"
                    android:textStyle="bold"
                    android:gravity="center_vertical|left" />
            </LinearLayout>

            <!-- Humidity -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/weather_row_height"
                android:layout_margin="@dimen/common_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/weather_detail_label_width"
                    android:layout_height="match_parent"
                    android:text="@string/humidity"
                    android:textSize="@dimen/default_font_size"
                    android:paddingLeft="@dimen/common_padding"
                    android:gravity="center_vertical|right" />
                <TextView
                    android:id="@+id/weather_humidity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/default_font_size"
                    android:paddingLeft="@dimen/common_padding"
                    android:textStyle="bold"
                    android:gravity="center_vertical|left" />
            </LinearLayout>

            <!-- Wind -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/weather_row_height"
                android:layout_margin="@dimen/common_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/weather_detail_label_width"
                    android:layout_height="match_parent"
                    android:text="@string/wind"
                    android:textSize="@dimen/default_font_size"
                    android:paddingLeft="@dimen/common_padding"
                    android:gravity="center_vertical|right" />
                <TextView
                    android:id="@+id/weather_wind"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/default_font_size"
                    android:paddingLeft="@dimen/common_padding"
                    android:textStyle="bold"
                    android:gravity="center_vertical|left" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</FrameLayout>
